--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Snake</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <title>Document</title>
 </head>
 <body>
-    <div id="game-board"></div>
-    
+    <div class="game">
+        <div class="game-board"></div>
+        <div class="score"><span id="score">0</span></div>
+        <div class="level"><span id="level">1</span></div>
+
+</div>
+<script src="/assets/js/game.js"></script>    
 </body>
 </html>
