changed controls for keyboard from numeric to String values

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <button class="right">right</button>
     </div>
     <div class="popup">
-        <button class="play Again">Play Again</button>
+        <button class="playAgain">Play Again</button>
     </div>
+    <script src="/assets/js/game.js"></script>
 </body>
 </html>
 <!--DOCTYPE html>
