--- a/index.html
+++ b/index.html
@@ -3,50 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <title>Snake Game</title>
+    <title>Document</title>
 </head>
 <body>
-    <div class="scoreDisplay"></div>
-    <div class="grid"></div>
-    <div class="button">
-        <button class="top">top</button>
-        <button class="bottom">bottom</button>
-        <button class="left">left</button>
-        <button class="right">right</button>
-    </div>
-    <div class="popup">
-        <button class="playAgain">Play Again</button>
-    </div>
-    <script src="/assets/js/game.js"></script>
+    
 </body>
 </html>
-<!--DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <title>Snake Game</title>
-</head>
-<body>
-    <div class="game">
-        <div class="game-board" id="game-board">
-            <div class="grid-row">
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-            </div>
-            <div class="grid-row">
-                <div class="grid-cell"></div>
-                <div class="grid-cell"></div>
-            </div>
-        </div>
-
-        <div class="score"><span id="score">0</span></div>
-        <div class="level"><span id="level">1</span></div>
-</div>
-<script src="/assets/js/game.js"></script>    
-</body>
-</html>
--->
