wrote general  HTML structure

--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <title>Quiz Game</title>
 </head>
 <body>
+    <div id="quiz">
+        <div is="question-box">
+            <div id="question">Question:</div>
+            <div class="answer-btn">
+                <button class="btn">Answer1</button>
+                <button class="btn">Answer2</button>
+                <button class="btn">Answer3</button>
+                <button class="btn">Answer4</button>
+            </div>
+        </div>
+        <div class="controls">
+            <button id="start-btn" class="start-btn-btn">Start</button>
+            <button id="next-btn" class="next-btn-btn">Next</button>
+            
+
+        </div>
+    </div>
     
 </body>
 </html>
