--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>Quiz Game</title>
 </head>
 <body>
@@ -19,10 +20,9 @@
         <div class="controls">
             <button id="start-btn" class="start-btn-btn">Start</button>
             <button id="next-btn" class="next-btn-btn">Next</button>
-            
-
         </div>
     </div>
+    <script src="/assets/js/script.js"></script>
     
 </body>
 </html>
