--- a/index.html
+++ b/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <title>Quiz Game</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <title>Quiz Game</title>
 </head>
 <body>
-    <div id="quiz">
-        <div is="question-box">
-            <div id="question">Question:</div>
-            <div class="answer-btn">
-                <button class="btn">Answer1</button>
-                <button class="btn">Answer2</button>
-                <button class="btn">Answer3</button>
-                <button class="btn">Answer4</button>
-            </div>
-        </div>
-        <div class="controls">
-            <button id="start-btn" class="start-btn-btn">Start</button>
-            <button id="next-btn" class="next-btn-btn">Next</button>
-        </div>
+  <div id="quiz">
+    <div id="question-box" class="hide">
+      <div id="question">Question:</div>
+      <div id="answer-btn" class="btn-grid">
+        <button class="btn">Answer1</button>
+        <button class="btn">Answer2</button>
+        <button class="btn">Answer3</button>
+        <button class="btn">Answer4</button>
+      </div>
+      <div class="controls">
+        <button id="next-btn" class="next-btn-btn">Next</button>
+      </div>
     </div>
-    <script src="/assets/js/script.js"></script>
-    
+    <button id="start-btn" class="start-btn-btn">Start</button>
+  </div>
+  <script src="/assets/js/script.js"></script>
 </body>
 </html>
