--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
     <div id="question-box" class="hide">
       <div id="question">Question:</div>
       <div id="answer-btn" class="btn-grid">
-        <button class="btn">Answer1</button>
-        <button class="btn">Answer2</button>
-        <button class="btn">Answer3</button>
-        <button class="btn">Answer4</button>
-      </div>
-      <div class="controls">
+        </div>
+        <div class="controls">
         <button id="next-btn" class="next-btn-btn">Next</button>
       </div>
+      <div id="results"></div>
     </div>
     <button id="start-btn" class="start-btn-btn">Start</button>
   </div>
