Added correct and incorrect counter to quiz

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <button id="next-btn" class="next-btn-btn">Next</button>
       </div>
       <div id="results"></div>
+      <div class="score-area" class="hide"><!--Based on Love Math project code-->
+        <p class="scores">Correct:<span id="score">0</span></p>
+        <p class="Incorrect Answers">Incorrect:<span id="incorrect">0</span></p>
+      </div>
     </div>
     <button id="start-btn" class="start-btn-btn">Start</button>
   </div>
