--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <p class="scores">Correct:<span id="score">0</span></p>
         <p class="Incorrect Answers">Incorrect:<span id="incorrect">0</span></p>
       </div>
+      <div id="replay-menu" class="hide">
+        <p>Game Over! Do you want to play again?</p>
+        <button id="replay-yes">Yes</button>
+        <button id="replay-no">No</button>
+      </div>
     </div>
     <button id="start-btn" class="start-btn-btn">Start</button>
   </div>
