--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       <div class="score-area" class="hide"><!--Based on Love Math project code-->
         <p class="scores">Correct:<span id="score">0</span></p>
         <p class="Incorrect Answers">Incorrect:<span id="incorrect">0</span></p>
-      </div>
+      </div><!--
       <div id="replay-menu" class="hide">
-        <p>Game Over! Do you want to play again?</p>
-        <button id="replay-yes">Yes</button>
-        <button id="replay-no">No</button>
-      </div>
+        <p class="game-over-msg">Game Over! Do you want to play again?</p>
+        <button id="play-again-btn">Play Again</button>
+        <button id="quit-btn">Quit</button>
+      </div>-->
     </div>
     <button id="start-btn" class="start-btn-btn">Start</button>
   </div>
