--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <title>Quiz Game</title>
 </head>
 <body>
@@ -28,6 +28,6 @@
     </div>
     <button id="start-btn" class="start-btn-btn">Start</button>
   </div>
-  <script src="/assets/js/script.js"></script>
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
