added title and brief introduction to the quiz

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   <div id="quiz">
+    <h2>JavaScript Quiz</h2>
+    <p class="int">Test your knowledge and play the Quiz, if you answer three times incorretly you will lose!</p>
     <div id="question-box" class="hide">
       <div id="question">Question:</div>
       <div id="answer-btn" class="btn-grid">
@@ -16,17 +18,17 @@
         <button id="next-btn" class="next-btn-btn">Next</button>
       </div>
       <div id="results"></div>
-      <div class="score-area" class="hide"><!--Based on Love Math project code-->
+      <div class="score-area hide"><!--Based on Love Math project code-->
         <p class="scores">Correct:<span id="score">0</span></p>
         <p class="Incorrect Answers">Incorrect:<span id="incorrect">0</span></p>
-      </div><!--
+      </div>
       <div id="replay-menu" class="hide">
         <p class="game-over-msg">Game Over! Do you want to play again?</p>
         <button id="play-again-btn">Play Again</button>
         <button id="quit-btn">Quit</button>
-      </div>-->
+      </div>
     </div>
-    <button id="start-btn" class="start-btn-btn">Start</button>
+    <button id="start-btn" class="start-btn-btn hide">Start</button>
   </div>
   <script src="assets/js/script.js"></script>
 </body>
