--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <div id="question">Question:</div>
       <div id="answer-btn" class="btn-grid">
         </div>
-        <div class="controls">
+       <!--<div class="controls">
         <button id="next-btn" class="next-btn-btn">Next</button>
-      </div>
+      </div>-->
       <div id="results"></div>
       <div class="score-area hide"><!--Based on Love Math project code-->
         <p class="scores">Correct:<span id="score">0</span></p>
