--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="quiz">
-    <h2>JavaScript Quiz</h2>
+    <h2 id="title">JavaScript Quiz</h2>
     <p class="int">Test your knowledge and play the Quiz, if you answer three times incorretly you will lose!</p>
     <div id="question-box" class="hide">
       <div id="question">Question:</div>
