--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        <!--<div class="controls">
         <button id="next-btn" class="next-btn-btn">Next</button>
       </div>-->
-      <div id="results"></div>
+      <div id="results" class="hide"></div>
       <div class="score-area hide"><!--Based on Love Math project code-->
         <p class="scores">Correct:<span id="score">0</span></p>
         <p class="Incorrect Answers">Incorrect:<span id="incorrect">0</span></p>
