added a question counter to quiz

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div id="quiz">
     <h2 id="title">JavaScript Quiz</h2>
     <p class="int">Test your knowledge and play the Quiz, if you answer three times incorretly you will lose!</p>
+    <div id="counter">Question:<span>1/15</span></div>
     <div id="question-box" class="hide">
       <div id="question">Question:</div>
       <div id="answer-btn" class="btn-grid">
