--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <h2 id="title">JavaScript Quiz</h2>
     <p class="int">Test your knowledge and play the Quiz, if you answer three times incorretly you will lose!</p>
     <div id="counter">Question:<span>1/15</span></div>
+    <div id="progress-bar"> <!--Line 14-15 are based on: https://www.w3schools.com/howto/howto_js_progressbar.asp-->
+      <div id="my-bar">0%</div>
+    </div>
     <div id="question-box" class="hide">
       <div id="question">Question:</div>
       <div id="answer-btn" class="btn-grid">
