--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
   <div id="quiz">
+    <audio id="audio">
+      <source src="assets/soundtrack/thinking-time-148496.mp3"></audio>
+      <button id="mute-btn"><i class="fa-solid fa-volume-xmark"></i></button>
+    </audio>
     <h2 id="title">JavaScript Quiz</h2>
     <p class="int">Test your knowledge and play the Quiz, if you answer three times incorretly you will lose!</p>
     <div id="counter">Question:<span>1/15</span></div>
