--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       <source src="assets/soundtrack/thinking-time-148496.mp3"></audio>
       <button id="mute-btn"><i class="fa-solid fa-volume-xmark"></i></button>
     </audio>
+    <audio id="wrong">
+      <source src="assets/soundtrack/fail-jingle-stereo-mix-88784.mp3">
+    </audio>
+    <audio id="correct">
+      <source src="assets/soundtrack/correct-6033.mp3">
+    </audio>
     <h2 id="title">JavaScript Quiz</h2>
     <p class="int">Test your knowledge and play the Quiz, if you answer three times incorretly you will lose!</p>
     <div id="counter">Question:<span>1/15</span></div>
