Added html file for homepage & Checkpage function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="quiz">
     <audio id="audio">
       <source src="assets/soundtrack/thinking-time-148496.mp3"></audio>
-      <button id="mute-btn"><i class="fa-solid fa-volume-xmark"></i></button>
+      <button id="mute-btn">Mute<i class="fa-solid fa-volume-xmark"></i></button>
     </audio>
     <audio id="wrong">
       <source src="assets/soundtrack/fail-jingle-stereo-mix-88784.mp3">
