--- a/home.html
+++ b/home.html
@@ -15,7 +15,10 @@
     <div id="quiz">
         <audio id="audio">
           <source src="assets/soundtrack/thinking-time-148496.mp3"></audio>
-          <button id="mute-btn"><i class="fa-solid fa-volume-xmark"></i></button>
+          <button id="mute-btn">
+            <i class="fa-solid fa-volume-xmark" id="mute-icon"></i>
+            <i class="fa-solid fa-volume-high" id="unmute-icon"></i>
+        </button>
         </audio>
         <audio id="wrong">
           <source src="assets/soundtrack/buzzer-or-wrong-answer-20582.mp3">
@@ -33,9 +36,6 @@
           <div id="question">Question:</div>
           <div id="answer-btn" class="btn-grid">
             </div>
-           <!--<div class="controls">
-            <button id="next-btn" class="next-btn-btn">Next</button>
-          </div>-->
           <div id="results" class="hide"></div>
           <div class="score-area hide"><!--Based on Love Math project code-->
             <p class="scores">Correct:<span id="score">0</span></p>
@@ -46,11 +46,11 @@
         <div id="replay-menu" class="hide">
           <p class="game-over-msg">Game Over! Do you want to play again?</p>
           <button id="play-again-btn">Play Again</button>
-          <!--<button id="quit-btn">Quit</button>-->
         </div>
       </div>
 
     
       <script src="assets/js/script.js"></script>
+      <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 </html>
