--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <div id="quiz">
     <audio id="audio">
       <source src="assets/soundtrack/thinking-time-148496.mp3"></audio>
-      <button id="mute-btn">Mute<i class="fa-solid fa-volume-xmark"></i></button>
+      <button id="mute-btn">
+        <i class="fa-solid fa-volume-xmark" id="mute-icon"></i>
+        <i class="fa-solid fa-volume-high" id="unmute-icon"></i>
+    </button>
     </audio>
     <audio id="wrong">
       <source src="assets/soundtrack/buzzer-or-wrong-answer-20582.mp3">
@@ -21,6 +24,7 @@
     <h2 id="title">JavaScript Quiz</h2>
     <p class="int">Test your knowledge and play the Quiz, if you answer three times incorretly you will lose!</p>
     <div id="counter">Question:<span>1/15</span></div>
+    <button id="quit-btn"><i class="fa-solid fa-circle-xmark icon"></i></button>
     <div id="progress-bar"> <!--Line 14-15 are based on: https://www.w3schools.com/howto/howto_js_progressbar.asp-->
       <div id="my-bar">0%</div>
     </div>
@@ -45,5 +49,6 @@
     </div>
   </div>
   <script src="assets/js/script.js"></script>
+  <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 </html>
