adjusted css to display score area centered

--- a/game.html
+++ b/game.html
@@ -22,7 +22,6 @@
       <source src="assets/soundtrack/correct-6033.mp3">
     </audio>
     <h2 id="title">JavaScript Quiz</h2>
-    <p class="int">Test your knowledge and play the Quiz, if you answer three times incorretly you will lose!</p>
     <div id="counter">Question:<span>1/15</span></div>
     <button id="quit-btn"><i class="fa-solid fa-circle-xmark icon"></i></button>
     <div id="progress-bar"> <!--Line 14-15 are based on: https://www.w3schools.com/howto/howto_js_progressbar.asp-->
@@ -36,7 +35,7 @@
         <button id="next-btn" class="next-btn-btn">Next</button>
       </div>-->
       <div id="results" class="hide"></div>
-      <div class="score-area hide"><!--Based on Love Math project code-->
+      <div class="score-area"><!--Based on Love Math project code-->
         <p class="scores">Correct:<span id="score">0</span></p>
         <p class="Incorrect Answers">Incorrect:<span id="incorrect">0</span></p>
       </div>
