outcommented reset of score area in showResults()

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div id="replay-menu" class="hide">
           <p class="game-over-msg">Game Over! Do you want to play again?</p>
           <button id="play-again-btn">Play Again</button>
-          <button id="quit-btn">Quit</button>
+          <!--<button id="quit-btn">Quit</button>-->
         </div>
       </div>
     <script src="assets/js/script.js"></script>
