adjusted modal functions and added eventlisteners

--- a/game.html
+++ b/game.html
@@ -47,7 +47,7 @@
         <p class="Incorrect Answers">Incorrect:<span id="incorrect">0</span></p>
       </div>
     </div>
-    <button id="start-btn" class="start-btn-btn hide">Start</button>
+    <button id="start-btn-quiz" class="start-btn-btn hide">Start</button>
      <div id="replay-menu" class="hide">
       <p class="game-over-msg">Game Over! Do you want to play again?</p>
       <button id="play-again-btn">Play Again</button>
