--- a/index.html
+++ b/index.html
@@ -18,55 +18,57 @@
     <div id="text-overlay">
     <h1>Welcome to our JavaScript Quiz</h1>
         <p>The quiz contains 15 questions and you have to get at least 12 questions correct, otherwise the quiz will end and you will have the option to replay and try again!</p>
-        <button id="start-btn-btn" class="start-btn-btn hide">Start</button>
-        </div>
-        <div id="myModal" class="modal">
+        <button id="start-btn-home" class="start-btn-btn hide">Start</button>
+        <!--https://www.geeksforgeeks.org/how-to-create-a-modal-box-using-html-css-and-javascript/-->
+        <div class="modal-overlay hide">
           <div class="modal-content">
-            <span id="close" onclick="closeModal()">&times;</span>
-            <p>Enter your name:</p>
-            <input type="text" id="userName">
-            <button onclick="startGame()">Submit</button>
+            <!--<span class="close-modal-btn">&times;</span>-->
+            <form id="player-form">
+              <label for="playerName">Enter your name:</label>
+              <input type="text" id="playerName" name="playerName">
+              <input type="submit" value="Submit">
+            </form>
           </div>
-        </div>
-      </div>
-    <div id="quiz">
-        <audio id="audio">
-          <source src="assets/soundtrack/thinking-time-148496.mp3"></audio>
-          <button id="mute-btn">
-            <i class="fa-solid fa-volume-xmark" id="mute-icon"></i>
-            <i class="fa-solid fa-volume-high" id="unmute-icon"></i>
-        </button>
-        </audio>
-        <audio id="wrong">
-          <source src="assets/soundtrack/buzzer-or-wrong-answer-20582.mp3">
-        </audio>
-        <audio id="correct">
-          <source src="assets/soundtrack/correct-6033.mp3">
-        </audio>
-        <h2 id="title">JavaScript Quiz</h2>
-        <div id="counter">Question:<span>1/15</span></div>
-        <button id="quit-btn"><i class="fa-solid fa-circle-xmark icon"></i></button>
-        <div id="progress-bar"> <!--Line 14-15 are based on: https://www.w3schools.com/howto/howto_js_progressbar.asp-->
-          <div id="my-bar">0%</div>
-        </div>
-        <div id="question-box" class="hide">
-          <div id="question">Question:</div>
-          <div id="answer-btn" class="btn-grid">
-            </div>
-          <div id="results" class="hide"></div>
-          <div class="score-area"> <!--Based on Love Math project code-->
-            <p class="scores">Correct:<span id="score">0</span></p>
-            <p class="Incorrect Answers">Incorrect:<span id="incorrect">0</span></p>
-          </div>
-        </div>
-        <button id="start-btn" class="start-btn-btn hide">Start</button>
-        <div id="replay-menu" class="hide">
-          <p class="game-over-msg">Game Over! Do you want to play again?</p>
-          <button id="play-again-btn">Play Again</button>
-          <!--<button id="quit-btn">Quit</button>-->
-        </div>
-      </div>
-    <script src="assets/js/script.js"></script>
-      <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
-</body>
-</html>
+         </div>
+              <div id="quiz">
+                <audio id="audio">
+                  <source src="assets/soundtrack/thinking-time-148496.mp3"></audio>
+                  <button id="mute-btn">
+                    <i class="fa-solid fa-volume-xmark" id="mute-icon"></i>
+                    <i class="fa-solid fa-volume-high" id="unmute-icon"></i>
+                  </button>
+                </audio>
+                <audio id="wrong">
+                  <source src="assets/soundtrack/buzzer-or-wrong-answer-20582.mp3">
+                </audio>
+                <audio id="correct">
+                  <source src="assets/soundtrack/correct-6033.mp3">
+                </audio>
+                <h2 id="title">JavaScript Quiz</h2>
+                <div id="counter">Question:<span>1/15</span></div>
+                <button id="quit-btn"><i class="fa-solid fa-circle-xmark icon"></i></button>
+                <div id="progress-bar"> <!--Line 14-15 are based on: https://www.w3schools.com/howto/howto_js_progressbar.asp-->
+                  <div id="my-bar">0%</div>
+                </div>
+                <div id="question-box" class="hide">
+                  <div id="question">Question:</div>
+                  <div id="answer-btn" class="btn-grid">
+
+                  </div>
+                  <div id="results" class="hide"></div>
+                  <div class="score-area"> <!--Based on Love Math project code-->
+                    <p class="scores">Correct:<span id="score">0</span></p>
+                    <p class="Incorrect Answers">Incorrect:<span id="incorrect">0</span></p>
+                  </div>
+                </div>
+                <button id="start-btn-quiz" class="start-btn-btn hide">Start</button>
+                <div id="replay-menu" class="hide">
+                  <p class="game-over-msg">Game Over! Do you want to play again?</p>
+                  <button id="play-again-btn">Play Again</button>
+                  <!--<button id="quit-btn">Quit</button>-->
+                </div>
+              </div>
+              <script src="assets/js/script.js"></script>
+              <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
+            </body>
+            </html>
