--- a/game.html
+++ b/game.html
@@ -14,6 +14,17 @@
   
 </head>
 <body>
+  <!--<div class="modal-overlay hide">
+    <div class="modal-content">
+      <span class="close-modal-btn">&times;</span>
+      <form id="player-form">
+        <label for="playerName">Enter your name:</label>
+        <input type="text" id="playerName" name="playerName">
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+  </div>-->
+  
   <div id="quiz">
     <audio id="audio">
       <source src="assets/soundtrack/thinking-time-148496.mp3"></audio>
@@ -51,8 +62,8 @@
      <div id="replay-menu" class="hide">
       <p class="game-over-msg">Game Over! Do you want to play again?</p>
       <button id="play-again-btn">Play Again</button>
-      <!--<button id="quit-btn">Quit</button>-->
     </div>
+    <button id="replay-btn">Replay</button>
   </div>
   <script src="assets/js/script.js"></script>
   <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
