--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <p>The quiz contains 15 questions and you have to get at least 12 questions correct, otherwise the quiz will end and you will have the option to replay and try again!</p>
         <button id="start-btn-home" class="start-btn-btn hide">Start</button>
         <!--https://www.geeksforgeeks.org/how-to-create-a-modal-box-using-html-css-and-javascript/-->
-        <div class="modal-overlay hide">
+        <!--<div class="modal-overlay hide">
           <div class="modal-content">
-            <!--<span class="close-modal-btn">&times;</span>-->
+            <span class="close-modal-btn">&times;</span>
             <form id="player-form">
               <label for="playerName">Enter your name:</label>
               <input type="text" id="playerName" name="playerName">
               <input type="submit" value="Submit">
-            </form>
+            </form>-->
           </div>
          </div>
               <div id="quiz">
@@ -65,8 +65,8 @@
                 <div id="replay-menu" class="hide">
                   <p class="game-over-msg">Game Over! Do you want to play again?</p>
                   <button id="play-again-btn">Play Again</button>
-                  <!--<button id="quit-btn">Quit</button>-->
                 </div>
+                <button id="replay-btn">Replay</button>
               </div>
               <script src="assets/js/script.js"></script>
               <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
