--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                   <p class="game-over-msg">Game Over! Do you want to play again?</p>
                   <button id="play-again-btn">Play Again</button>
                 </div>
-                <button id="replay-btn">Replay</button>
+                <button id="replay-btn" class="hide">Replay</button>
               </div>
               <script src="assets/js/script.js"></script>
               <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
