adeed a some more text to paragraph on homepage

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="homepage">
     <div id="text-overlay">
     <h1>Welcome to our JavaScript Quiz</h1>
-        <p>The quiz contains 15 questions and you have to get at least 12 questions correct, otherwise the quiz will end and you will have the option to replay and try again!</p>
+        <p>The quiz contains 15 questions and you have to get at least 12 questions correct, otherwise the quiz will end and you will have the option to replay and try again, or quit and return to the homepage!</p>
         <button id="start-btn-home" class="start-btn-btn hide">Start</button>
         <!--https://www.geeksforgeeks.org/how-to-create-a-modal-box-using-html-css-and-javascript/-->
         <!--<div class="modal-overlay hide">
