added comment to point out the source for the code

--- a/game.html
+++ b/game.html
@@ -26,6 +26,7 @@
   </div>-->
   
   <div id="quiz">
+     <!--code from line30-42 based on this article:https://www.learningguild.com/articles/coding-sound-with-javascript-beginner-s-guide/-->
     <audio id="audio">
       <source src="assets/soundtrack/thinking-time-148496.mp3"></audio>
       <button id="mute-btn">
