--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           </div>
          </div>
               <div id="quiz">
+                <!--code from line35-47 based on this article:https://www.learningguild.com/articles/coding-sound-with-javascript-beginner-s-guide/-->
                 <audio id="audio">
                   <source src="assets/soundtrack/thinking-time-148496.mp3"></audio>
                   <button id="mute-btn">
