added replayQuit btn to both files

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <div id="replay-menu" class="hide">
                   <p class="game-over-msg">Game Over! Do you want to play again?</p>
                   <button id="play-again-btn">Play Again</button>
+                  <button id="replay-quit-btn">Quit</button>
                 </div>
                 <button id="replay-btn" class="hide">Replay</button>
               </div>
