added meta tags for description and keywords

--- a/game.html
+++ b/game.html
@@ -3,28 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Challenge your JavaScript knowledge with a interactive quiz! Test your skills, learn new concepts, and have fun while exploring the world of JavaScript programming.">
+  <meta name="keywords" content="javascript, programming, quiz, learning, explore programming languages, test.">
   <title>Quiz Game</title>
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
   <link rel="manifest" href="/assets/favicon/site.webmanifest">
-
-
+  
   <link rel="stylesheet" href="assets/css/style.css">
   
 </head>
 <body>
-  <!--<div class="modal-overlay hide">
-    <div class="modal-content">
-      <span class="close-modal-btn">&times;</span>
-      <form id="player-form">
-        <label for="playerName">Enter your name:</label>
-        <input type="text" id="playerName" name="playerName">
-        <input type="submit" value="Submit">
-      </form>
-    </div>
-  </div>-->
-  
   <div id="quiz">
      <!--code from line30-42 based on this article:https://www.learningguild.com/articles/coding-sound-with-javascript-beginner-s-guide/-->
     <audio id="audio">
@@ -50,9 +40,6 @@
       <div id="question">Question:</div>
       <div id="answer-btn" class="btn-grid">
         </div>
-       <!--<div class="controls">
-        <button id="next-btn" class="next-btn-btn">Next</button>
-      </div>-->
       <div id="results" class="hide"></div>
       <div class="score-area"><!--Based on Love Math project code-->
         <p class="scores">Correct:<span id="score">0</span></p>
