shortend meta keywords

--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Challenge your JavaScript knowledge with a interactive quiz! Test your skills, learn new concepts, and have fun while exploring the world of JavaScript programming.">
-  <meta name="keywords" content="javascript, programming, quiz, learning, explore programming languages, test.">
+  <meta name="keywords" content="javascript, programming, quiz, learning, explore, languages, test.">
   <title>Quiz Game</title>
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
