added source code comment

--- a/game.html
+++ b/game.html
@@ -15,8 +15,9 @@
   
 </head>
 <body>
+  <!--quiz section is based on:https://www.youtube.com/watch?v=riDzcEQbX6k-->
   <div id="quiz">
-     <!--code from line30-42 based on this article:https://www.learningguild.com/articles/coding-sound-with-javascript-beginner-s-guide/-->
+     <!--code from line21-33 based on this article:https://www.learningguild.com/articles/coding-sound-with-javascript-beginner-s-guide/-->
     <audio id="audio">
       <source src="assets/soundtrack/thinking-time-148496.mp3"></audio>
       <button id="mute-btn">
