deleted unnecessery meta & extra closing audio tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="0;url=index.html">
     <meta name="description" content="Challenge your JavaScript knowledge with a interactive quiz! Test your skills, learn new concepts, and have fun while exploring the world of JavaScript programming.">
     <meta name="keywords" content="javascript, programming, quiz, learning, explore, languages, test.">
     <title>Quiz Homepage</title>
@@ -18,7 +17,7 @@
 <body>
   <div id="homepage">
     <div id="text-overlay">
-    <h1>Welcome to our JavaScript Quiz</h1>
+    <h1>JavaScript Quiz</h1>
         <p>The quiz contains 15 questions and you have to get at least 12 questions correct, otherwise the quiz will end and you will have the option to replay and try again, or quit and return to the homepage!</p>
         <button id="start-btn-home" class="start-btn-btn hide">Start</button>
       </div>
@@ -31,7 +30,6 @@
           <i class="fa-solid fa-volume-xmark" id="mute-icon"></i>
           <i class="fa-solid fa-volume-high" id="unmute-icon"></i>
         </button>
-      </audio>
       <audio id="wrong">
         <source src="assets/soundtrack/buzzer-or-wrong-answer-20582.mp3">
       </audio>
